# call

./: .env.example  .gitignore  .vercelignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  README.md  csr_agent.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
frontend/: .env.example  README.md  VERCEL_DEPLOYMENT.md  index.html  package.json  tailwind.config.js  tsconfig.node.json  vercel.json
frontend/api/: health.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AudioVisualizer.css  AudioVisualizer.tsx  ChatTranscript.css  ChatTranscript.tsx
